tests/neg/i10603a.check
-- Error: tests/neg/i10603a.scala:2:35 ---------------------------------------------------------------------------------
2 |  val x = implicitly[List[Boolean]] // error
  |                                   ^
  |           no given instance of type List[Boolean] was found for parameter e of method implicitly in object Predef
